# chronicon

./: .chronicon.toml.example  .dockerignore  .gitignore  .mcp.json.example  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile  Dockerfile.alpine  EXAMPLES.md  FAQ.md  MCP_SETUP.md  MIGRATION.md  PERFORMANCE.md  README.md  SECURITY.md  TROUBLESHOOTING.md  WATCH_MODE.md  demo_api.py  opencode.json.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build.yml  mirror.yml  release.yml  security.yml  test.yml
docs/: SCREENSHOTS.md
docs/deployment/: docker.md  kubernetes.md
examples/: README.md
examples/docker/: .env.postgres.example  .env.sqlite.example  .gitignore  Dockerfile.alpine  Dockerfile.alpine-watch  Dockerfile.api  Dockerfile.watch  README-ALPINE.md  README.md  SECURITY.md  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.sqlite.yml  docker-compose.test-postgres.yml  docker-compose.test.yml  docker-compose.yml  seccomp.json
examples/meta-example/: ABOUT.md  README.md  index.html  search.html  search_index.json
examples/postgres-example/: docker-compose.yml
examples/postgres-test/: .env.example  .gitignore  docker-compose.yml
examples/systemd/: README.md  chronicon-watch.service
pytest-of-user/: pytest-current
pytest-of-user/pytest-22/: test_activity_timelinecurrent  test_api_full_workflowcurrent  test_archive_command_category_current  test_archive_command_export_ercurrent  test_archive_command_invalid_ccurrent  test_archive_command_multiple_current  test_archive_command_network_ecurrent  test_archive_command_successcurrent  test_archive_exception_continucurrent  test_archive_http_127_no_warnicurrent  test_archive_http_localhost_nocurrent  test_archive_http_url_warningcurrent  test_archive_https_url_no_warncurrent  test_archive_invalid_categoriecurrent  test_archive_invalid_urlcurrent  test_archive_keyboard_interrupcurrent  test_archive_multiple_sitescurrent  (+154 more)
scripts/: capture_screenshots.py  complete_archive.py  fetch_missing_users.py  regenerate_example.py  take_screenshots.py
templates/: base.html  category.html  index.html  search-results.html  search.html  topic.html  topic_index.html  user.html  user_index.html
tests/: __init__.py  test_api_client.py  test_api_integration.py  test_api_schemas.py  test_asset_downloader.py  test_asset_pipeline_integration.py  test_cli.py  test_cli_database_url.py  test_cli_export.py  test_concurrency.py  test_config.py  test_database.py  test_database_factory.py  test_examples_accuracy.py  test_exporters.py  test_fetchers.py  test_fts_search.py  test_fts_search_server_integration.py  test_git_manager.py  test_health_server.py  test_hybrid_exporter.py  test_incremental_update_integration.py  test_local_assets.py  test_markdown_export_integration.py  test_mcp_server.py  test_models.py  test_models_edge_cases.py  test_postgres_integration.py  test_processors.py  test_real_world_integration.py  test_rest_api.py  test_search_indexer_streaming.py  test_update_manager.py  test_watch_daemon.py  test_watch_status.py
(+1400 files in other folders)
