[project]
name = "chronicon"
version = "1.0.0"
description = "Chronicle and preserve Discourse forums to HTML, Markdown, and GitHub formats"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
keywords = ["discourse", "archiver", "forum", "backup", "markdown", "html", "static-site"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "beautifulsoup4>=4.14.3,<5.0.0",
    "html2text>=2025.4.15,<2026.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "rich>=14.3.1,<15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
    "types-beautifulsoup4>=4.12.0.20250516",
]
postgres = [
    "psycopg[binary]>=3.3.2,<4.0.0",
]
api = [
    "fastapi>=0.128.0,<1.0.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
]
mcp = [
    "mcp>=1.26.0,<2.0.0",
]
all = [
    "chronicon[postgres,api,mcp]",
]

[project.urls]
Homepage = "https://github.com/19-84/chronicon"
Repository = "https://github.com/19-84/chronicon"
Issues = "https://github.com/19-84/chronicon/issues"
Changelog = "https://github.com/19-84/chronicon/blob/main/CHANGELOG.md"
Documentation = "https://github.com/19-84/chronicon#readme"

[project.scripts]
chronicon = "chronicon.cli:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/chronicon"]

[tool.hatchling.build.targets.wheel.shared-data]
"templates" = "share/chronicon/templates"
"static" = "share/chronicon/static"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
]

[tool.ruff.lint.isort]
known-first-party = ["chronicon"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

